ipc/ipdl/test/ipdl/error/ReplyPrioWithoutReturns.ipdl
//error: non-returns message `NormalPrio' cannot specify [ReplyPriority]

[ChildProc=any]
async protocol ReplyPrioWithoutReturns
{
child:
  [ReplyPriority=normal] async NormalPrio();
};
